Found a simple layout bug

--- a/layout/assets/main.less
+++ b/layout/assets/main.less
@@ -259,6 +259,9 @@ a:active {
 	border-bottom-color: @aside;
 }
 
+ul, ol {
+	margin-bottom: 24/@em;
+}
 
 	#nav a:active, #nav a:active .icon {
 		background: @aside;
